syntax = "proto3";
option java_package = "proto";

service PersonServiceZodiacChinese{

  rpc getPersonZodiacChinese(PersonZodiacChinese) returns (PersonZodiacChineseResponse);
}

message PersonZodiacChinese{
  string date = 1;
}

message PersonZodiacChineseResponse{
  string zodiac = 1;
  string data = 2;
}
